--- a/index.css
+++ b/index.css
@@ -130,9 +130,12 @@ footer > button > img {
 @media (min-width: 768px) {
   article {
     display: flex;
+    width: 600px;
   }
 
-  img {
+  picture > img {
+    width: 250px !important;
     border-bottom-left-radius: 8px;
+    border-top-right-radius: 0 !important;
   }
 }
