add credit CSS reset

--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+/* 
+  Credits : https://www.joshwcomeau.com/css/custom-css-reset/
+*/
+
 /*
   1. La largeur total d'un élément incluant le padding et les bordures
 */
